2011-08-09  Ozkan Sezer  <sezeroz@gmail.com>

	* Makefile.am: Remove stdio/wcstof.c from build.
	* Makefile.in: Regenerate.
	* misc/mbrtowc.c, misc/wcrtomb.c, misc/wcstof.c, misc/wcstold.c,
	misc/wctob.c: Fix utterly incomprehensible whitespace style.

2011-08-07  Christian Franke  <Christian.Franke@t-online.de>

	* stdio/mingw_vfscanf.c: Fix segmentation fault when a char or string
	format (without malloc option) is used.

2011-07-23  Ozkan Sezer  <sezeroz@gmail.com>

	* lib32/vfw32.mri: Adjust for lib32 subdirectory.
	* lib32/vfw64.mri: New.
	* Makefile.am: Generate libvfw32.a using vfw32.mri.
	* Makefile.in: Regenerate.

2011-05-31  Kai Tietz  <kai.tietz@onevision.com>

	* crt/pesect.c, crt/pseudo-reloc.c: Optimize pseudo-relocation
	code and prevent multiple temporary write-access settings on same
	section.

2011-05-26  Dongsheng Song  <dongsheng@users.sourceforge.net>:

	* lib32/msvcr90.def (__report_gsfailure, _assert, _byteswap_uint64,
	_byteswap_ulong, _byteswap_ushort, _ctime32, _decode_pointer, _difftime32,
	_difftime64, _encode_pointer, _findfirst64i32, _findnext64i32, _fpreset,
	_fseeki64, _fstat64i32, _ftelli64, _get_errno, _gmtime32, _localtime32,
	_mkgmtime32, _mktime32, _rotl64, _rotr64, _set_errno, _stat64i32, _time32,
	_wassert, _wctime32, _wfindfirst64i32, _wfindnext64i32, _wstat64i32, atexit,
	btowc, cos, exp, fabs, fmod, log, mbrlen, mbrtowc, mbsrtowcs, modf, pow, sin,
	sqrt, strnlen, wcrtomb, wcsnlen, wcsrtombs, wctob): Mark as DATA.

	* lib64/msvcr90.def (__report_gsfailure, _assert, _byteswap_uint64,
	_byteswap_ulong, _byteswap_ushort, _ctime32, _decode_pointer, _difftime32,
	_difftime64, _encode_pointer, _findfirst64i32, _findnext64i32, _fpreset,
	_fseeki64, _fstat64i32, _ftelli64, _get_errno, _gmtime32, _localtime32,
	_mkgmtime32, _mktime32, _rotl64, _rotr64, _set_errno, _stat64i32, _time32,
	_wassert, _wctime32, _wfindfirst64i32, _wfindnext64i32, _wstat64i32, acosf,
	asinf, atan2f, atanf, atexit, btowc, ceilf, cos, cosf, coshf, exp, expf,