@@ -21,28 +21,29 @@ static void trecurse (const node_t *, void (*action)(const void *, VISIT, int),
 				  __MINGW_ATTRIB_NONNULL (2);
 /* Walk the nodes of a tree */
 static void
-trecurse( const node_t *root,	/* Root of the tree to be walked */
-	void (*action)(const void *, VISIT, int),
-	int level)
+trecurse (const node_t *root,	/* Root of the tree to be walked */
+	  void (*action)(const void *, VISIT, int),
+	  int level)
 {
-	if (root->llink == NULL && root->rlink == NULL)
-		(*action)(root, leaf, level);
-	else {
-		(*action)(root, preorder, level);
-		if (root->llink != NULL)
-			trecurse(root->llink, action, level + 1);
-		(*action)(root, postorder, level);
-		if (root->rlink != NULL)
-			trecurse(root->rlink, action, level + 1);
-		(*action)(root, endorder, level);
-	}
+  if (root->llink == NULL && root->rlink == NULL)
+    (*action)(root, leaf, level);
+  else
+    {
+      (*action)(root, preorder, level);
+      if (root->llink != NULL)
+        trecurse (root->llink, action, level + 1);
+      (*action)(root, postorder, level);
+      if (root->rlink != NULL)
+	      trecurse(root->rlink, action, level + 1);
+      (*action)(root, endorder, level);
+    }
 }
 
 /* Walk the nodes of a tree */
 void
-twalk( const void *vroot,	/* Root of the tree to be walked */
-	void (*action) (const void *, VISIT, int))
+twalk (const void *vroot,	/* Root of the tree to be walked */
+       void (*action) (const void *, VISIT, int))
 {
-	if (vroot != NULL && action != NULL)
-		trecurse(vroot, action, 0);
+  if (vroot != NULL && action != NULL)
+    trecurse(vroot, action, 0);
 }
